GitHub Retrieve Demo2/ Email-to-anything/objects/Email_Services_Function__c.object
<CustomObject>
    <description>Selected email services functions</description>
    <fields>
        <fullName>Assigned_Owner_Type__c</fullName>
        <description>Assigned owner user type</description>
        <label>Assigned Owner Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related object assigned owner</description>
        <label>Assigned Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Email_Services_Functions_Assigned_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Queue__c</fullName>
        <description>Assigned queue</description>
        <label>Assigned Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Assign_Field__c</fullName>
        <description>Email body assign field</description>
        <label>Email Body Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_1__c</fullName>
        <description>Body contains argument</description>
        <label>Body Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_2__c</fullName>
        <description>Body contains argument</description>
        <label>Body Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Argument_3__c</fullName>
        <description>Body contains argument</description>
        <label>Body Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_1__c</fullName>
        <description>Email body contains field</description>
        <label>Body Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_2__c</fullName>
        <description>Email body contains field</description>
        <label>Body Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_3__c</fullName>
        <description>Email body contains field</description>
        <label>Body Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_Value_1__c</fullName>
        <description>Email body contains assigned value</description>
        <label>Body Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_Value_2__c</fullName>
        <description>Email body contains assigned value</description>
        <label>Body Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Contains_Field_Value_3__c</fullName>
        <description>Email body contains assigned value</description>
        <label>Body Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Match_Type__c</fullName>
        <description>Contact match type</description>
        <label>Contact Match Type</label>
        <picklist>
            <picklistValues>
                <fullName>Earliest Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latest Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latest Modified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Date_Add_Days__c</fullName>
        <description>Email received date adjustment days</description>
        <label>Email Date Add Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Date_Assign_Field__c</fullName>
        <description>Email received date assign field</description>
        <label>Email Date Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Message_Object_Key_Prefix__c</fullName>
        <description>Related email message object key prefix</description>
        <label>Related Email Msg Obj Key Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address_Assign_Field__c</fullName>
        <description>Email from-address assign field</description>
        <label>Email From-Address Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Domain_Assign_Field__c</fullName>
        <description>Email from-address domain assign field</description>
        <label>Email From Domain Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_First_Name_Assign_Field__c</fullName>
        <description>Email from first name assign field</description>
        <label>Email From First Name Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Last_Name_Assign_Field__c</fullName>
        <description>Email from last name assign field</description>
        <label>Email From Last Name Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name_Assign_Field__c</fullName>
        <description>Email from name assign field</description>
        <label>Email From Name Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Id__c</fullName>
        <description>Email services function id</description>
        <label>Function Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Html_Body_Assign_field__c</fullName>
        <label>Email Html Body Assign field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Assign_Field__c</fullName>
        <description>Matched account assign field</description>
        <label>Matched Account Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Contact_Assign_Field__c</fullName>
        <description>Matched contact assign field</description>
        <label>Matched Contact Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Key_Prefix__c</fullName>
        <description>Related object key prefix</description>
        <label>Related Object Key Prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_1__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_2__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_3__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value_1__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value_2__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value_3__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field_Value__c</fullName>
        <description>Related object status picklist field assigned value</description>
        <label>Related Object Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Status_Field__c</fullName>
        <description>Related object status picklist field</description>
        <label>Related Object Status Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <description>Queue id for unmatched or errored messages</description>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Insert__c</fullName>
        <description>Target object record insert status</description>
        <label>Record Insert</label>
        <picklist>
            <picklistValues>
                <fullName>Insert Not Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Manual Insert Allowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <description>Related object record type Id (on insert)</description>
        <label>Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Id_Assign_Field__c</fullName>
        <description>Email service id assign field</description>
        <label>Service ID Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Id_Code__c</fullName>
        <description>Email service id code</description>
        <label>Service ID Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Assign_Field__c</fullName>
        <description>Email subject assign field</description>
        <label>Email Subject Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_1__c</fullName>
        <description>Subject contains argument</description>
        <label>Subject Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_2__c</fullName>
        <description>Subject contains argument</description>
        <label>Subject Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Argument_3__c</fullName>
        <description>Subject contains argument</description>
        <label>Subject Contains Argument</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_1__c</fullName>
        <description>Email subject contains field</description>
        <label>Subject Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_2__c</fullName>
        <description>Email subject contains field</description>
        <label>Subject Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_3__c</fullName>
        <description>Email subject contains field</description>
        <label>Subject Contains Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_Value_1__c</fullName>
        <description>Email subject contains assigned value</description>
        <label>Subject Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_Value_2__c</fullName>
        <description>Email subject contains assigned value</description>
        <label>Subject Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Contains_Field_Value_3__c</fullName>
        <description>Email subject contains assigned value</description>
        <label>Subject Contains Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address_Assign_Field__c</fullName>
        <description>Email to-address assign field</description>
        <label>Email To-Address Assign Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Email Services Function</label>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Services Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>